ingress-controller/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev-heal.infoviz.co
    http:
      paths:
      - path: /microservice1
        pathType: Prefix
        backend:
          service:
            name: kong-dev-kong-proxy
            namespace: dev-backend
            port:
              number: 80
      - path: /microservice2
        pathType: Prefix
        backend:
          service:
            name: kong-dev-kong-proxy
            namespace: dev-backend
            port:
              number: 80
  - host: stage-heal.infoviz.co
    http:
      paths:
      - path: /microservice1
        pathType: Prefix
        backend:
          service:
            name: kong-stage-kong-proxy
            namespace: stage-backend
            port:
              number: 80
      - path: /microservice12
        pathType: Prefix
        backend:
          service:
            name: kong-stage-kong-proxy
            namespace: stage-backend
            port:
              number: 80
