ingress-controller/dev-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-backend-ingress
  namespace: dev-backend
spec:
  ingressClassName: nginx  # Specify the IngressClass name here
  rules:
  - host: dev-heal.infoviz.co
    http:
      paths:
      - path: /microservice1
        pathType: Prefix
        backend:
          service:
            name: microservice1
            port:
              number: 80
      - path: /microservice2
        pathType: Prefix
        backend:
          service:
            name: kong-dev-kong-proxy
            port:
              number: 80
