ingress-controller/stage-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stage-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev-heal.infoviz.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kong-stage-kong-proxy
            port:
              number: 80
